k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: credit-scoring
  labels:
    app.kubernetes.io/name: credit-scoring-engine
    app.kubernetes.io/part-of: retail-banking
    environment: prod
    managed-by: kubernetes
