k8s/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-eng-credit-scoring-engine-dev
  namespace: credit-scoring
  labels:
    app.kubernetes.io/name: credit-scoring-engine
    app.kubernetes.io/version: "3.1.0"
    app.kubernetes.io/part-of: retail-banking
    environment: dev
    managed-by: helm
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/actuator/prometheus"
spec:
  selector:
    app.kubernetes.io/name: credit-scoring-engine
    environment: dev
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
