k8s/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-eng-credit-scoring-engine-prod
  labels:
    app.kubernetes.io/name: credit-scoring-engine
    app.kubernetes.io/version: "3.1.0"
    app.kubernetes.io/part-of: retail-banking
    environment: prod
    managed-by: kubernetes
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  selector:
    app.kubernetes.io/name: credit-scoring-engine
    environment: prod
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
